--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Movie Browser</string>
+    <string name="sort">Sort</string>
+    <string name="about">About</string>
+    <string name="sort_by">Sorting:</string>
+    <string name="cancel">Cancel</string>
+    <string name="top_20">Top 20 movies by</string>
+    <string name="popularity">Popularity</string>
+    <string name="rating">Rating</string>
+
 </resources>
