--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,9 @@
     <string name="the_movie_poster">The poster for the movie</string>
     <string name="user_rating">User Rating: </string>
     <string name="network_unavailable">Network is currently unavailable</string>
-    <string name="about_nanodegee">Movie Browser is an assignment created and submitted as part of the The Android Developer Nanodegree program at Udacity</string>
+    <string name="about_nanodegee">Movie Browser was created and submitted as an assignment for the The Android Developer Nanodegree program at Udacity</string>
     <string name="about_tmdb">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
+    <string name="the_moviedb_logo">The MovieDb Logo</string>
 
 
 </resources>
