--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,18 @@
     <string name="about_nanodegee">Movie Browser was created and submitted as an assignment for the The Android Developer Nanodegree program at Udacity</string>
     <string name="about_tmdb">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
     <string name="the_moviedb_logo">The MovieDb Logo</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_num_cols_key">num_cols_key</string>
+    <string name="pref_num_col_label">Number of movie posters per row</string>
+    <string name="pref_num_col_default">2</string>
+    <string name="double_cols_for_landscape_label">Double number of Movies in Landscape mode?</string>
+    <string name="double_cols_for_landscape_key">double_cols_for_landscape</string>
+    <string name="double_cols_for_landscape_off">Off</string>
+    <string name="double_cols_for_landscape_on">On</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="number_of_cols_in_landscape_is">Number of movies in landscape is:</string>
 
 
 </resources>
