Changed project package structure, added some live data, now retrieve movie details from api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="top_20">Top 20 movies by %1$s </string>
     <string name="popularity">Popularity: </string>
     <string name="rating">Rating: </string>
+    <string name="favourite_movies">Favourite Movies</string>
     <string name="released_label">Released: </string>
     <string name="the_movie_poster">The poster for the movie</string>
     <string name="user_rating">User Rating: </string>
