--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="number_of_cols_in_landscape_is">Number of movies in landscape is:</string>
+    <string name="title_activity_refresh">Refresh</string>
 
 
 </resources>
